<resources>
    <string name="app_name">AnnouncementBoard</string>
    <!-- HOME -->
    <string name="btn_log_in">LOG IN</string>
    <string name="btn_register">REGISTER</string>
    <string name="txt_in_hint_user">username</string>
    <string name="txt_in_hint_pwd">password</string>
    <string name="txt_link_registration">I don\'t have account yet</string>
    <string name="txt_link_continue_without_logging_in">I don\'t want to log in</string>
    <!--USER REGISTRATION-->
    <string name="txt_in_repeat_pwd">repeat password</string>
    <string name="txt_in_name">name</string>
    <string name="txt_in_phone">phone</string>
    <string name="txt_in_mail">mail</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="dateFormat">dd/MM/yyyy</string>

    <string name="jwt">jwt</string>
    <string name="jwt_secret">08C4BCCB24E83458641DE6B3C83D21243680115D1A60E0E58614847FFA87AEC7CC3C263044612E3B97CC3B51BB8D9A151C51261371EDBF9E17A57F63F5F57FEB</string>

    <string name="phone_regex">\\d{9}</string>
    <string name="invalid_phone">Phone number should consist of 9 digits</string>
    <string name="username_regex">\\w{6,30}</string>
    <string name="invalid_username">Username should be at least 6 characters long. It can consist of letters [A-Z] and
        digits [0-9]
    </string>
    <string name="sample_categories">Computers &amp; Accessories \n</string>
</resources>
