<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.Login">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/log_in" android:text="@string/btn_log_in" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.728"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.499"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:hint="@string/txt_in_hint_pwd" android:layout_marginBottom="312dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.503"
                app:validateMinLength="@{6}"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/username"
                android:hint="@string/txt_in_hint_user"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                android:layout_marginTop="116dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.113"
                app:validateMinLength="@{6}"/>
        <TextView
                android:text="@string/txt_link_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_link"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.345"
                app:layout_constraintVertical_bias="0.728"/>
        <TextView
                android:text="@string/txt_link_continue_without_logging_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textColor="@android:color/holo_blue_dark" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.312"
                app:layout_constraintVertical_bias="0.804"/>

    </android.support.constraint.ConstraintLayout>
</layout>